--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
       <input type="text" #serverName>
       <button class="btn btn-primary" (click)="onAddServer(serverName.value)">Add Server</button>
       <hr>
+      <br>
+      <br>
+      <button class="btn btn-success" (click)="onSave()">Save servers</button>
       <ul class="list-group" *ngFor="let server of servers">
         <li class="list-group-item">{{ server.name }} (ID: {{ server.id }})</li>
       </ul>
