--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <br>
       <br>
       <button class="btn btn-success" (click)="onSave()">Save servers</button>
+      <button class="btn btn-danger" (click)="onGet()">Get servers</button>
       <ul class="list-group" *ngFor="let server of servers">
         <li class="list-group-item">{{ server.name }} (ID: {{ server.id }})</li>
       </ul>
